--- a/.github/workflows/tests-orders.yml
+++ b/.github/workflows/tests-orders.yml
@@ -1,9 +1,9 @@
-name: tests-auth
+name: tests-orders
 
 on:
   pull_request:
     paths:
-      - "auth/**"
+      - "orders/**"
 
 jobs:
   build:
@@ -11,4 +11,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-      - run: cd auth && npm install && npm run test:ci
+      - run: cd orders && npm install && npm run test:ci
