--- a/.github/workflows/tests-payments.yml
+++ b/.github/workflows/tests-payments.yml
@@ -1,9 +1,9 @@
-name: tests-auth
+name: tests-payments
 
 on:
   pull_request:
     paths:
-      - "auth/**"
+      - "payments/**"
 
 jobs:
   build:
@@ -11,4 +11,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-      - run: cd auth && npm install && npm run test:ci
+      - run: cd payments && npm install && npm run test:ci
